# openmensa

./: .dockerignore  .env  .git-blame-ignore-revs  .gitignore  .markdownlint.yaml  .prettierignore  .rubocop.yml  .travis.yml  .yarnrc.yml  Dockerfile  Gemfile  Gemfile.local.example  Guardfile  Guardfile.local.example  LICENSE.md  Makefile  Pipfile  Procfile  README.md  Rakefile  config.ru  docker-compose.yml  entrypoint.sh  mise.toml  mkdocs.yml  nginx.conf  openmensa.canspec  package.json  pyproject.toml  renovate.json  renovate.json5  rspack.config.mjs  vite.config.mts  zensical.toml
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  docs.yml  maintenance-cache-wipe.yml  maintenance-registry-pr-closed.yml  maintenance-registry.yml  maintenance-workflow-cleanup.yml  test.yml
.husky/: pre-commit
.tx/: config
app/controllers/: api_controller.rb  application_controller.rb  authorization_controller.rb  (+19 more)
config/: application.rb  appsignal.rb  autoprefixer.yml  brakeman.yml  cable.yml  database.ci.jruby.yml  database.jruby.yml  database.yml  environment.rb  mailer.yml  newrelic.yml  omniauth.yml  puma.rb  routes.rb  schedule.rb  secrets.yml  settings.yml  skylight.yml  unicorn.rb  vite.json
db/: schema.rb  seeds.rb
doc/: mensa_data_example_1.xml
docs/: .pages.yml  CNAME  index.md
lib/: open_mensa.rb  symbolized_hash.rb  transactional.rb
public/: 400.html  404.html  406-unsupported-browser.html  422.html  500.html  manifest.json  open-mensa-v1.dtd  open-mensa-v1.xsd  open-mensa-v2.xsd  open-mensa-v3.xsd
spec/: factories.rb  spec_helper.rb
(+512 files in other folders)
