[project]
dependencies = [
    "mkdocs-material>=8.3.9",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mdx-truly-sane-lists>=1.2",
    "mkdocs-awesome-pages-plugin>=2.7.0",
]
requires-python = ">= 3.7"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
